app/assets/stylesheets/shared/header.scss
@import "flexbox";
@import '../colors';

@import '../elements/main-container';
@import '../elements/home-link';
@import '../elements/navigation-links';
@import '../elements/drop-arrow';

$header-height: 5rem;

.header {
  max-width: 1088px;
  margin: auto;
  padding: 0 2rem;

  @include flexbox;
  @include justify-content(space-between);
  @include align-items(stretch);

  height: 100%;
  color: $dark-blue;

  .home-link {
    @include home-link(color);
  }
  .navigation-links { @include navigation-links($dark-blue) }
  .support-centre   { display: none; }
}

.header__container {
  font-size: 16px;

  height: $header-height;
  width: 100%;

  border-bottom: solid 1px $light-gray;
}

.header__right {
  @include flexbox;
  @include justify-content(flex-end);
  @include align-items(stretch);
}

.header__element {
  margin: 0 1.5rem;
  line-height: $header-height;
  font-weight: 500;
  color: inherit;
  background: none;

  &:last-child {
    margin-right: 0;
  }

  &--dropdown {
    display: flex;
    align-items: center;

    &::after {
      margin-left: 6px;
      @include arrow-svg;
    }
  }

  &.toggle--active {
    @include drop-arrow--active;
  }

  &.is-selected {
    border-bottom: solid 4px $dark-blue;
  }
}

